Updated git ignore files

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
+# Compiled class file 
+*.class 
+# Log file 
+*.log 
+# Package Files # 
+*.jar 
+*.war 
+*.ear 
+*.zip 
+*.tar.gz 
+*.rar 
+# virtual machine crash logs
+hs_err_pid* 
+#settings
+/.settings
 /target/
